--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
     <title>Dropbox</title>
 </head>
 <body>
-    <div class="container">
+    
     <!-- inizio header -->
         <header>
+            <div class="header-container-top">
+                <div class="header-top-left">
+                    <img src="img/logo-small.png" alt="">
+                    <a href="">Lorem ipsum</a>
+                    <a href="">Lorem ipsum</a>
+                    <a href="">Lorem ipsum</a>
+                </div>
+                <div class="header-top-right">
+                    <a href="">Lorem ipsum</a>
+                    <a href="">Lorem ipsum</a>
+                    <a href="">Lorem ipsum</a>
+                    <button>Lorem</button>
+
+                </div>
+            </div>
 
         </header>
     <!-- fine header -->
     <!-- inizio main -->
         <main>
+            <div class="container">
 
+            </div>
         </main>
     <!-- fine main -->
     <!-- inizio footer -->
