add css header top fix position

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="">Lorem ipsum</a>
                     <a href="">Lorem ipsum</a>
                     <a href="">Lorem ipsum</a>
-                    <button>Lorem</button>
+                    <button class="button-blue">Lorem</button>
 
                 </div>
             </div>
