add and fix bottom header html css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
 
                 </div>
             </div>
+            <div class="header-container-bottom">
+                <div class="container">
+                    <h1>Lorem ipsum dolor sit amet consectetur. Lorem ipsum  dolor sit amet.</h1>
+                    <div class="container-info-header">   
+                        <div class="left-header-bottom">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quaerat nam beatae officia aperiam. Aspernatur, enim dolor nemo labore soluta repellendus molestiae est aperiam hic saepe sit! Id, minima laboriosam.</p>
+                            <button class="button-blue"> Lorem, ipsum dolor.</button>
+                            <a href="">Lorem ipsum dolor sit.</a>
+                            <i class="fa-solid fa-arrow-down fa-2xl"></i>
+                        </div>
+                         <div class="right-header-bottom">
+                            <img src="img/jumbo.png" alt="jumbo">
+                         </div>
+                    </div> 
+                </div>
+            </div>
 
         </header>
     <!-- fine header -->
