add main section , button e start columns

--- a/index.html
+++ b/index.html
@@ -48,7 +48,38 @@
     <!-- inizio main -->
         <main>
             <div class="container">
+                <!-- section-1 -->
+                <section class="first-section">
+                    <h2>Trova Il piano business che fa per te</h2>
+                    <div class="button-first-section">
+                        <input type="radio" value="fatturazione mensile">
+                        <label for="fatturazione mensile">fatturazione mensile</label>
+                        <input type="radio" value=" fatturazione annuale">
+                        <label for="fatturazione annuale">fatturazione annuale</label>
+                    </div>
+                    <div class="columns-container-main">
+                        <div class="columns-box-main">
+                            <div class="item-columns">
+                                <i class="fa-solid fa-user"></i>singolo
+                            </div>
 
+                        </div>
+                        <div class="columns-box-main">
+                            <div class="item-columns">
+                                <i class="fa-solid fa-people-group"></i>team
+                            </div>
+
+                        </div>
+                        <div class="columns-box-main">
+                            <div class="item-columns">
+                                <i class="fa-solid fa-house"></i>azienda
+                            </div>
+
+                        </div>
+
+                    </div>
+                </section>
+                <!-- fine section-1 -->
             </div>
         </main>
     <!-- fine main -->
