fix and update header e section1 main

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                             <a href="">Lorem ipsum dolor sit.</a>
                             <i class="fa-solid fa-arrow-down fa-2xl"></i>
                         </div>
-                         <div class="right-header-bottom">
-                            <img src="img/jumbo.png" alt="jumbo">
-                         </div>
+                        <div class="right-header-bottom-1">
+                            <div class="right-header-bottom-2">
+                                 <img src="img/jumbo.png" alt="jumbo">
+                             </div>
+                        </div>
                     </div> 
                 </div>
             </div>
@@ -62,17 +64,74 @@
                             <div class="item-columns">
                                 <i class="fa-solid fa-user"></i>singolo
                             </div>
+                            <div class="info-columns">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                <h4>$25,55</h4>
+                                <p>/mese</p>
+                                <ul>
+                                    <li> <i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li> <i class="fa-solid fa-bag-shopping"></i>5 terabyte di spazio e archiviazione compresi </li>
+                                    <li> <i class="fa-solid fa-repeat"></i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda.</li>
+                                </ul>
+                                <button class="button-blue">prova gratis 30 giorni</button>
+                                <hr>
+                                <h4>Punti Salienti</h4>
+                                <ul>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem, ipsum dolor.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
 
                         </div>
                         <div class="columns-box-main">
                             <div class="item-columns">
-                                <i class="fa-solid fa-people-group"></i>team
+                                 <i class="fa-solid fa-people-group"></i>team
+                            </div>
+                            <div class="info-columns">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                <h4>$25,55</h4>
+                                <p>/mese</p>
+                                <ul>
+                                    <li> <i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li> <i class="fa-solid fa-bag-shopping"></i>5 terabyte di spazio e archiviazione compresi </li>
+                                    <li> <i class="fa-solid fa-repeat"></i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda.</li>
+                                </ul>
+                                <button class="button-blue">prova gratis 30 giorni</button>
+                                <hr>
+                                <h4>Punti Salienti</h4>
+                                <ul>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem, ipsum dolor.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+
                             </div>
 
                         </div>
                         <div class="columns-box-main">
                             <div class="item-columns">
                                 <i class="fa-solid fa-house"></i>azienda
+                            </div>
+                            <div class="info-columns">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                <h4>$25,55</h4>
+                                <p>/mese</p>
+                                <ul>
+                                    <li> <i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li> <i class="fa-solid fa-bag-shopping"></i>5 terabyte di spazio e archiviazione compresi </li>
+                                    <li> <i class="fa-solid fa-repeat"></i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda.</li>
+                                </ul>
+                                <button class="button-blue">prova gratis 30 giorni</button>
+                                <hr>
+                                <h4>Punti Salienti</h4>
+                                <ul>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem, ipsum dolor.</li>
+                                    <li><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet.</li>
+                                </ul>
                             </div>
 
                         </div>
