add footer section1 and update css

--- a/index.html
+++ b/index.html
@@ -137,6 +137,24 @@
                         </div>
 
                     </div>
+                    <div class="footer-section-1">
+                        <div class="footer-section1-item">
+                            <i class="fa-solid fa-place-of-worship"></i>Team
+                        </div>
+                        <div class="info-footer-section1">
+                            <div class="info-footer-section1-left">
+                                <h3>Lorem ipsum dolor sit amet.</h3>
+                                <h5>Lorem, ipsum dolor.</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing Lorem ipsum dolor sit amet. elit. Consectetur, voluptatum?</p>
+
+                            </div>
+                            <div class="info-footer-section1-right">
+                                 <button class="button button-blue">Lorem, ipsum dolor.</button>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </section>
                 <!-- fine section-1 -->
             </div>
