add and fix section 2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quaerat nam beatae officia aperiam. Aspernatur, enim dolor nemo labore soluta repellendus molestiae est aperiam hic saepe sit! Id, minima laboriosam.</p>
                             <button class="button-blue"> Lorem, ipsum dolor.</button>
                             <a href="">Lorem ipsum dolor sit.</a>
-                            <i class="fa-solid fa-arrow-down fa-2xl"></i>
+                            <div class="arrow">
+                                <i class="fa-solid fa-arrow-down fa-2xl"></i>
+                            </div> 
                         </div>
                         <div class="right-header-bottom-1">
                             <div class="right-header-bottom-2">
@@ -157,6 +159,23 @@
                     </div>
                 </section>
                 <!-- fine section-1 -->
+                <!-- section2 -->
+                <section class="second-section">
+                    <div class="card-section-2">
+                        <div class="box-left">
+                            <img src="img/partner.png" alt="partner">
+                        </div>
+                        <div class="box-right">
+                            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, officia!</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor praesentium molestiae nisi molestias sequi quisquam pariatur ipsum esse modi, quibusdam neque soluta facilis blanditiis sint.</p>
+                            <button class="button-white"> Lorem ipsum dolor </button>
+
+                        </div>
+
+                    </div>
+
+                </section>
+                <!-- fine section2 -->
             </div>
         </main>
     <!-- fine main -->
