add and fix section 4 css html

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                                 <h4>$25,55</h4>
                                 <p>/mese</p>
                                 <ul>
-                                    <li> <i class="fa-solid fa-user"></i> 1 utente</li>
-                                    <li> <i class="fa-solid fa-bag-shopping"></i>5 terabyte di spazio e archiviazione compresi </li>
-                                    <li> <i class="fa-solid fa-repeat"></i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda.</li>
+                                    <li><div> <i class="fa-solid fa-user"></i></div><div> 1 utente </div></li>
+                                    <li><div><i class="fa-solid fa-bag-shopping"></i></div><div>5 terabyte di spazio e archiviazione compresi </div></li>
+                                    <li><div><i class="fa-solid fa-repeat"></i></div><div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda. </div></li>
                                 </ul>
                                 <button class="button-blue">prova gratis 30 giorni</button>
                                 <hr>
@@ -95,9 +95,9 @@
                                 <h4>$25,55</h4>
                                 <p>/mese</p>
                                 <ul>
-                                    <li> <i class="fa-solid fa-user"></i> 1 utente</li>
-                                    <li> <i class="fa-solid fa-bag-shopping"></i>5 terabyte di spazio e archiviazione compresi </li>
-                                    <li> <i class="fa-solid fa-repeat"></i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda.</li>
+                                    <li><div> <i class="fa-solid fa-user"></i></div><div> 1 utente </div></li>
+                                    <li><div><i class="fa-solid fa-bag-shopping"></i></div><div>5 terabyte di spazio e archiviazione compresi </div></li>
+                                    <li><div><i class="fa-solid fa-repeat"></i></div><div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda. </div></li>
                                 </ul>
                                 <button class="button-blue">prova gratis 30 giorni</button>
                                 <hr>
@@ -122,9 +122,9 @@
                                 <h4>$25,55</h4>
                                 <p>/mese</p>
                                 <ul>
-                                    <li> <i class="fa-solid fa-user"></i> 1 utente</li>
-                                    <li> <i class="fa-solid fa-bag-shopping"></i>5 terabyte di spazio e archiviazione compresi </li>
-                                    <li> <i class="fa-solid fa-repeat"></i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda.</li>
+                                    <li><div> <i class="fa-solid fa-user"></i></div><div> 1 utente </div></li>
+                                    <li><div><i class="fa-solid fa-bag-shopping"></i></div><div>5 terabyte di spazio e archiviazione compresi </div></li>
+                                    <li><div><i class="fa-solid fa-repeat"></i></div><div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, assumenda. </div></li>
                                 </ul>
                                 <button class="button-blue">prova gratis 30 giorni</button>
                                 <hr>
@@ -176,6 +176,51 @@
 
                 </section>
                 <!-- fine section2 -->
+                <!-- inizio section3 -->
+                <section class="third-section container">
+                    <div class="box-container-third-section">
+                        
+                        <div class="box-container-third-section-title">
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                        <div class="card-container-section-3">
+                            <div class="card">
+                                <img src="img/business-feature-coordinate-it.png" alt="">
+                                <h3>Lorem ipsum dolor sit Lorem, ipsum dolor. amet.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi incidunt odit beatae quas perferendis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident eveniet ea ducimus ipsam! Doloremque fuga minima excepturi rerum odio! Eius non maiores officia?</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/business-feature-integrations-it.png" alt="">
+                                <h3>Lorem ipsum dolor sit Lorem, ipsum dolor. amet.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi incidunt odit beatae quas perferendis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident eveniet ea ducimus ipsam! Doloremque fuga minima excepturi rerum odio! Eius non maiores officia?</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/business-feature-multi-device.png" alt="">
+                                <h3>Lorem ipsum dolor sit Lorem, ipsum dolor. amet.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi incidunt odit beatae quas perferendis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident eveniet ea ducimus ipsam! Doloremque fuga minima excepturi rerum odio! Eius non maiores officia?</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/business-feature-security.png" alt="">
+                                <h3>Lorem ipsum dolor sit Lorem, ipsum dolor. amet.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi incidunt odit beatae quas perferendis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident eveniet ea ducimus ipsam! Doloremque fuga minima excepturi rerum odio! Eius non maiores officia?</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/business-feature-send-files-it.png" alt="">
+                                <h3>Lorem ipsum dolor sit Lorem, ipsum dolor. amet.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi incidunt odit beatae quas perferendis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident eveniet ea ducimus ipsam! Doloremque fuga minima excepturi rerum odio! Eius non maiores officia?</p>
+                            </div>
+                            <div class="card">
+                                <img src="img/business-feature-switching-tools.png" alt="">
+                                <h3>Lorem ipsum dolor sit Lorem, ipsum dolor. amet.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi incidunt odit beatae quas perferendis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam provident eveniet ea ducimus ipsam! Doloremque fuga minima excepturi rerum odio! Eius non maiores officia?</p>
+                            </div>
+
+                        </div>
+                    </div>
+                   
+
+                </section>
+                <!-- fine section3 -->
             </div>
         </main>
     <!-- fine main -->
