add section 4 not finish

--- a/index.html
+++ b/index.html
@@ -221,7 +221,50 @@
 
                 </section>
                 <!-- fine section3 -->
+                <!-- inizio section4 -->
+                <section class="four-section container">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, eveniet.</h2>
+                    <a href="">scopri di più sui nostri clienti</a>
+                </section>
+                <!-- fine section4 -->
             </div>
+            <section class="five-section">
+                <div class="big-container-five-section">
+                    <div class="small-four-container">
+                        <div class="partner background-blu">
+                            <img src="img/arizona_state_university.svg" alt="">
+                        </div>
+                        <div class="partner background-green">
+                            <img src="img/clear_channel.svg" alt="">
+                        </div>
+                        <div class="partner background-gold">
+                            <img src="img/designit.svg" alt="">
+                        </div>
+                        <div class="partner background-red">
+                            <img src="img/hearst_corp.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="only-one-container">
+                        <img src="img/partner.png" alt="">
+                    </div>
+                    <div class="small-four-container">
+                        <div class="partner background-red">
+                            <img src="img/arizona_state_university.svg" alt="">
+                        </div>
+                        <div class="partner background-green">
+                            <img src="img/clear_channel.svg" alt="">
+                        </div>
+                        <div class="partner background-blu">
+                            <img src="img/designit.svg" alt="">
+                        </div>
+                        <div class="partner background-gold">
+                            <img src="img/hearst_corp.svg" alt="">
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
         </main>
     <!-- fine main -->
     <!-- inizio footer -->
