add and finish section 6

--- a/index.html
+++ b/index.html
@@ -226,8 +226,10 @@
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, eveniet.</h2>
                     <a href="">scopri di più sui nostri clienti</a>
                 </section>
-                <!-- fine section4 -->
+               
             </div>
+             <!-- fine section4 -->
+             <!-- inizio section 5 -->
             <section class="five-section">
                 <div class="big-container-five-section">
                     <div class="small-four-container">
@@ -263,8 +265,19 @@
                     </div>
 
                 </div>
+                
+            </section>
+            <!-- fine section 5 -->
+            <!-- inizio section 6 -->
+            <section class="section-six">
+                <div class="container container-section-six">
+                    <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                    <button class="button-white">Lorem ipsum dolor sit.</button>
+
+                </div>
 
             </section>
+            <!-- fine section 6 -->
         </main>
     <!-- fine main -->
     <!-- inizio footer -->
