add adn finish footer top

--- a/index.html
+++ b/index.html
@@ -282,6 +282,32 @@
     <!-- fine main -->
     <!-- inizio footer -->
         <footer>
+            <div class="box-footer-top">
+                <div class="container info-footer-top">
+                    <h2>Domande frequenti</h2>
+                    <hr>
+                    <div class="under-row">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dignissimos?</p>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <hr>
+                    <div class="under-row">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dignissimos?</p>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <hr>
+                    <div class="under-row">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dignissimos?</p>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <hr>
+
+                </div>
+
+            </div>
+            <div class="box-footer-bottom">
+
+            </div>
 
         </footer>
     <!-- fine footer -->
