finish footer add and fix rule css

--- a/index.html
+++ b/index.html
@@ -306,6 +306,66 @@
 
             </div>
             <div class="box-footer-bottom">
+                <div class=" container black-columns">
+                    <div class="inside-columns">
+                        <h3>Lorem, ipsum.</h4>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                        </ul>
+                    </div>
+                    <div class="inside-columns">
+                        <h3>Lorem, ipsum.</h4>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                        </ul>
+                    </div>
+                    <div class="inside-columns">
+                        <h3>Lorem, ipsum.</h4>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                        </ul>
+                    </div>
+                    <div class="inside-columns">
+                        <h3>Lorem, ipsum.</h4>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                        </ul>
+                    </div>
+                    <div class="inside-columns">
+                        <h3>Lorem, ipsum.</h4>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="container">
+                    <div class="under-black-columns">
+                        <hr>
+                        <div class="language"><div><i class="fa-solid fa-globe"></i></div><p>Italiano</p><div><i class="fa-solid fa-sort-up"></i></div>
+                    </div>
+
+                </div>
 
             </div>
 
