fix html header

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <section class="first-section">
                     <h2>Trova Il piano business che fa per te</h2>
                     <div class="button-first-section">
-                        <input type="radio" value="fatturazione mensile">
+                        <input type="radio" value="fatturazione">
                         <label for="fatturazione mensile">fatturazione mensile</label>
-                        <input type="radio" value=" fatturazione annuale">
+                        <input type="radio" value=" fatturazione">
                         <label for="fatturazione annuale">fatturazione annuale</label>
                     </div>
                     <div class="columns-container-main">
