update and fix section 5

--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
                         </div>
                     </div>
                     <div class="only-one-container">
-                        <img src="img/partner.png" alt="">
+                        <img src="img/designit.svg" alt="">
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et assumenda tempore sunt delectus repellendus iusto blanditiis magni Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius mollitia, rem atque culpa sint fuga modi voluptas? Suscipit, ut? aspernatur doloremque?</p>
+                        <p>Lorem ipsum dolor sit.</p>
                     </div>
                     <div class="small-four-container">
                         <div class="partner background-red">
