--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="header-container-bottom">
-                <div class="container">
+                <div class="container-big">
                     <h1>Lorem ipsum dolor sit amet consectetur. Lorem ipsum  dolor sit amet.</h1>
                     <div class="container-info-header">   
                         <div class="left-header-bottom">
